# ECS-Cpp

./: .clang-format  .clang-tidy  CMakeLists.txt
include/: foobar.h
src/: main.cpp
